# Project Setup
[project]
name = "fennel_invest_api"
version = "2.0.1"
description = "Unofficial Fennel.com Invest API written in Python Requests"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Nelson Dane" }
]
urls = { "Homepage" = "https://github.com/NelsonDane/fennel-invest-api" }


# Dependencies
requires-python = ">=3.10"
dependencies = [
    "protobuf>=6.30.0",
    "requests",
]

[dependency-groups]
dev = [
    "fix-protobuf-imports>=0.1.7",
    "mypy>=1.14.1",
    "python-dotenv>=1.0.1",
    "ruff>=0.13.2",
    "types-requests>=2.32.0.20241016",
]


# Building
[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fennel_invest_api"]
include-package-data = true

[tool.setuptools.package-data]
"fennel_invest_api" = ["models/*.pyi", "models/*.py"]

# Linting and Style
[tool.ruff]
target-version = "py310"
extend = "./styles/ruff.toml"

[tool.ruff.lint]
exclude = ["fennel_invest_api/models/*", "test*"]

[tool.mypy]
exclude = "test*"

[[tool.mypy.overrides]]
module = "fennel_invest_api.models.*"
ignore_errors = true
